# compiler_lab

./: CMakeLists.txt  README.md  main.cpp
err/: error.cpp  error.h
lexer/: lexer.cpp  lexer.h  token.cpp  token.h
parser/: parser.cpp  parser.h
test/: output.txt_05.out  testfile.txt_02.in
utils/: file_reader.cpp  file_reader.h
